--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -138,6 +138,7 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
@@ -358,7 +359,7 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2479:0:6e00::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
@@ -663,6 +664,7 @@ deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:3ccd::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::132;
 deny 2a0d:bbc7:0:1::1df;
@@ -765,7 +767,6 @@ deny 2a12:a800:2:1:45:138:16:248;
 deny 2a12:a800:2:1:45:138:16:42;
 deny 2a12:a800:2:1:45:138:16:69;
 deny 2a12:a800:2:1:45:138:16:76;
-deny 2a12:a800:2:1:45:141:215:110;
 deny 2a12:a800:2:1:45:141:215:111;
 deny 2a12:a800:2:1:45:141:215:114;
 deny 2a12:a800:2:1:45:141:215:167;
@@ -782,7 +783,6 @@ deny 2a12:a800:2:1:45:141:215:63;
 deny 2a12:a800:2:1:45:141:215:80;
 deny 2a12:a800:2:1:45:141:215:88;
 deny 2a12:a800:2:1:45:141:215:90;
-deny 2a12:a800:2:1:45:141:215:95;
 deny 2a12:a800:2:1:45:141:215:97;
 deny 2a12:a800:2:1:45:80:158:167;
 deny 2a12:a800:2:1:45:80:158:175;
