--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -357,9 +357,10 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2479:0:6e00::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -692,6 +693,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
+allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -733,6 +735,7 @@ allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:156b::;
 allow 2a11:6100:0:1e6a::1;
@@ -751,6 +754,7 @@ allow 2a12:a800:2:1:185:241:208:71;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:185:241:208:92;
 allow 2a12:a800:2:1:45:138:16:107;
+allow 2a12:a800:2:1:45:138:16:113;
 allow 2a12:a800:2:1:45:138:16:164;
 allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:a800:2:1:45:138:16:222;
@@ -779,6 +783,7 @@ allow 2a12:a800:2:1:45:141:215:63;
 allow 2a12:a800:2:1:45:141:215:80;
 allow 2a12:a800:2:1:45:141:215:88;
 allow 2a12:a800:2:1:45:141:215:90;
+allow 2a12:a800:2:1:45:141:215:95;
 allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:167;
 allow 2a12:a800:2:1:45:80:158:175;
