--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -110,7 +110,7 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.168.167.144;
+allow 1.170.209.49;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -128,9 +128,9 @@ allow 130.193.15.79;
 allow 13.126.29.181;
 allow 13.232.154.134;
 allow 135.125.239.70;
-allow 136.175.8.45;
 allow 136.244.111.163;
 allow 138.59.18.110;
+allow 138.68.144.236;
 allow 139.162.90.140;
 allow 139.99.172.11;
 allow 139.99.8.57;
@@ -996,6 +996,7 @@ allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
+allow 23.236.122.193;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8902::f03c:95ff:fe1e:6065;
@@ -1303,7 +1304,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1860,7 +1861,7 @@ allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.230.119.146;
 allow 5.253.247.27;
-allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1942,6 +1943,7 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.239.46.144;
 allow 85.239.41.130;
+allow 85.93.218.204;
 allow 86.54.28.49;
 allow 87.118.110.27;
 allow 87.118.116.103;
@@ -1954,6 +1956,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1991,7 +1994,6 @@ allow 92.246.84.133;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
-allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
